# src/modules/accounts/useCases/alunos/getAluno/GetAlunoController.ts
@@ -5,12 +5,17 @@ import { GetAlunosUseCase } from "./GetAlunoUseCase";
 
 export class GetAlunosController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { matricula } = request.params;
+    const { cpf } = request.params;
+    const { matriculas } = request.query;
 
     const getAlunosUseCase = container.resolve(GetAlunosUseCase);
 
+    if (!cpf) {
+      return response.status(400).json({ error: "CPF não informado" });
+    }
+
     try {
-      const aluno = await getAlunosUseCase.execute(matricula);
+      const aluno = await getAlunosUseCase.execute({cpf, matriculas: !(String(matriculas).toLowerCase() === "false") });
 
       return response.json(aluno);
     } catch (error) {
